--- a/config.yml
+++ b/config.yml
@@ -13,6 +13,7 @@ Karabo_bridge:
   #    source (str): EuXFEL source
   #    key (str): Value to extract
   #    description (str, optional): `attributo` description. Defaults to None.
+  #    type (str, optional): The AMARCORD data type. Defaults to "decimal".
   #    store (bool, optional): Whether to store the value. Defaults to True.
   #    action (str, optional): Either "compute_arithmetic_mean", "compute_standard_deviation", "check_if_constant" or "store_last". Defaults to "compute_arithmetic_mean".
   #    unit (str, optional): Unit of measurement. Defaults to None.
