--- a/config.yml
+++ b/config.yml
@@ -125,7 +125,6 @@ Karabo_bridge:
 
       injector_image:
         key: data.image.data
-        type: image
         action: store_last
 
     detector.AGIPD:
@@ -135,6 +134,7 @@ Karabo_bridge:
       dark_run_type:
         source: SPB_DA_USR/MDL/AMARCORD_INFO
         key: darkExperiment.value
+        type: str
 
       dark_run_index:
         source: SPB_DA_USR/MDL/AMARCORD_INFO
@@ -143,7 +143,7 @@ Karabo_bridge:
       gain_setting:
         source: SPB_IRU_AGIPD1M1/MDL/FPGA_COMP
         key: gainMode.value
-        type: decimal
+        type: str
 
       position_z:
         source: SPB_IRU_AGIPD1M/MOTOR/Z_STEPPER
@@ -218,6 +218,7 @@ Karabo_bridge:
         unit: micrometer
       attenuator1_material:
         key: actual.value.materialAct1
+        type: str
       attenuator1_absorption:
         key: actual.value.absorptionAct1
         type: decimal
@@ -229,6 +230,7 @@ Karabo_bridge:
         key: actual.value.thicknessAct2
       attenuator2_material:
         key: actual.value.materialAct2
+        type: str
       attenuator2_absorption:
         key: actual.value.absorptionAct2
         type: decimal
@@ -240,6 +242,7 @@ Karabo_bridge:
         key: actual.value.thicknessAct3
       attenuator3_material:
         key: actual.value.materialAct3
+        type: str
       attenuator3_absorption:
         key: actual.value.absorptionAct3
         type: decimal
@@ -251,6 +254,7 @@ Karabo_bridge:
         key: actual.value.thicknessAct4
       attenuator4_material:
         key: actual.value.materialAct4
+        type: str
       attenuator4_absorption:
         key: actual.value.absorptionAct4
         type: decimal
@@ -262,6 +266,7 @@ Karabo_bridge:
         key: actual.value.thicknessAct5
       attenuator5_material:
         key: actual.value.materialAct5
+        type: str
       attenuator5_absorption:
         key: actual.value.absorptionAct5
         type: decimal
@@ -273,6 +278,7 @@ Karabo_bridge:
         key: actual.value.thicknessAct6
       attenuator6_material:
         key: actual.value.materialAct6
+        type: str
       attenuator6_absorption:
         key: actual.value.absorptionAct6
         type: decimal
@@ -284,6 +290,7 @@ Karabo_bridge:
         key: actual.value.thicknessAct7
       attenuator7_material:
         key: actual.value.materialAct7
+        type: str
       attenuator7_absorption:
         key: actual.value.absorptionAct7
         type: decimal
@@ -295,6 +302,7 @@ Karabo_bridge:
         key: actual.value.thicknessAct8
       attenuator8_material:
         key: actual.value.materialAct8
+        type: str
       attenuator8_absorption:
         key: actual.value.absorptionAct8
         type: decimal
@@ -306,6 +314,7 @@ Karabo_bridge:
         key: actual.value.thicknessAct9
       attenuator9_material:
         key: actual.value.materialAct9
+        type: str
       attenuator9_absorption:
         key: actual.value.absorptionAct9
         type: decimal
@@ -329,6 +338,7 @@ Karabo_bridge:
         unit: micrometer
       attenuator1_material:
         key: actual.value.materialRod1
+        type: str
       attenuator1_absorption:
         key: actual.value.absorptionRod1
         type: decimal
@@ -340,6 +350,7 @@ Karabo_bridge:
         key: actual.value.thicknessRod2
       attenuator2_material:
         key: actual.value.materialRod2
+        type: str
       attenuator2_absorption:
         key: actual.value.absorptionRod2
         type: decimal
@@ -351,6 +362,7 @@ Karabo_bridge:
         key: actual.value.thicknessRod3
       attenuator3_material:
         key: actual.value.materialRod3
+        type: str
       attenuator3_absorption:
         key: actual.value.absorptionRod3
         type: decimal
@@ -362,6 +374,7 @@ Karabo_bridge:
         key: actual.value.thicknessRod4
       attenuator4_material:
         key: actual.value.materialRod4
+        type: str
       attenuator4_absorption:
         key: actual.value.absorptionRod4
         type: decimal
@@ -378,6 +391,7 @@ Karabo_bridge:
 
       config0_valve_group_name:
         key: valvesConfigTable.value[0].valveGroupName
+        type: str
       config0_valve_indices:
         key: valvesConfigTable.value[0].valveIds
         action_axis: 0
@@ -385,9 +399,11 @@ Karabo_bridge:
         key: valvesConfigTable.value[0].nPositions
       config0_labels:
         key: valvesConfigTable.value[0].labels
+        type: list[str]
 
       config1_valve_group_name:
         key: valvesConfigTable.value[1].valveGroupName
+        type: str
       config1_valve_indices:
         key: valvesConfigTable.value[1].valveIds
         action_axis: 0
@@ -395,9 +411,11 @@ Karabo_bridge:
         key: valvesConfigTable.value[1].nPositions
       config1_labels:
         key: valvesConfigTable.value[1].labels
+        type: list[str]
 
       config2_valve_group_name:
         key: valvesConfigTable.value[2].valveGroupName
+        type: str
       config2_valve_indices:
         key: valvesConfigTable.value[2].valveIds
         action_axis: 0
@@ -405,6 +423,7 @@ Karabo_bridge:
         key: valvesConfigTable.value[2].nPositions
       config2_labels:
         key: valvesConfigTable.value[2].labels
+        type: list[str]
 
       groupA_position:
         key: GROUPA.currentPosition.value
