--- a/config.yml
+++ b/config.yml
@@ -29,6 +29,7 @@ Karabo_bridge:
       index:
         description: Run index
         key: runDetails.runId.value
+        type: int
 
       number:
         description: Run number
@@ -68,6 +69,7 @@ Karabo_bridge:
 
       number_of_bunches:
         key: sase1.nPulses.value
+        type: int
 
     # any detector
     # D. How to model detectors in the database?
@@ -139,6 +141,7 @@ Karabo_bridge:
       dark_run_index:
         source: SPB_DA_USR/MDL/AMARCORD_INFO
         key: darkRunNumber.value
+        type: int
 
       gain_setting:
         source: SPB_IRU_AGIPD1M1/MDL/FPGA_COMP
@@ -213,8 +216,10 @@ Karabo_bridge:
 
       attenuator1_inserted:
         key: actual.value.isInsertedAct1
+        type: int
       attenuator1_thickness:
         key: actual.value.thicknessAct1
+        type: decimal
         unit: micrometer
       attenuator1_material:
         key: actual.value.materialAct1
@@ -226,8 +231,10 @@ Karabo_bridge:
 
       attenuator2_inserted:
         key: actual.value.isInsertedAct2
+        type: int
       attenuator2_thickness:
         key: actual.value.thicknessAct2
+        type: decimal
       attenuator2_material:
         key: actual.value.materialAct2
         type: str
@@ -238,8 +245,10 @@ Karabo_bridge:
 
       attenuator3_inserted:
         key: actual.value.isInsertedAct3
+        type: int
       attenuator3_thickness:
         key: actual.value.thicknessAct3
+        type: decimal
       attenuator3_material:
         key: actual.value.materialAct3
         type: str
@@ -250,8 +259,10 @@ Karabo_bridge:
 
       attenuator4_inserted:
         key: actual.value.isInsertedAct4
+        type: int
       attenuator4_thickness:
         key: actual.value.thicknessAct4
+        type: decimal
       attenuator4_material:
         key: actual.value.materialAct4
         type: str
@@ -262,8 +273,10 @@ Karabo_bridge:
 
       attenuator5_inserted:
         key: actual.value.isInsertedAct5
+        type: int
       attenuator5_thickness:
         key: actual.value.thicknessAct5
+        type: decimal
       attenuator5_material:
         key: actual.value.materialAct5
         type: str
@@ -274,8 +287,10 @@ Karabo_bridge:
 
       attenuator6_inserted:
         key: actual.value.isInsertedAct6
+        type: int
       attenuator6_thickness:
         key: actual.value.thicknessAct6
+        type: decimal
       attenuator6_material:
         key: actual.value.materialAct6
         type: str
@@ -286,8 +301,10 @@ Karabo_bridge:
 
       attenuator7_inserted:
         key: actual.value.isInsertedAct7
+        type: int
       attenuator7_thickness:
         key: actual.value.thicknessAct7
+        type: decimal
       attenuator7_material:
         key: actual.value.materialAct7
         type: str
@@ -298,8 +315,10 @@ Karabo_bridge:
 
       attenuator8_inserted:
         key: actual.value.isInsertedAct8
+        type: int
       attenuator8_thickness:
         key: actual.value.thicknessAct8
+        type: decimal
       attenuator8_material:
         key: actual.value.materialAct8
         type: str
@@ -310,8 +329,10 @@ Karabo_bridge:
 
       attenuator9_inserted:
         key: actual.value.isInsertedAct9
+        type: int
       attenuator9_thickness:
         key: actual.value.thicknessAct9
+        type: decimal
       attenuator9_material:
         key: actual.value.materialAct9
         type: str
@@ -332,6 +353,7 @@ Karabo_bridge:
 
       attenuator1_increment:
         key: actual.value.incrementRod1
+        type: int
       attenuator1_thickness:
         key: actual.value.thicknessRod1
         type: decimal
@@ -346,6 +368,7 @@ Karabo_bridge:
 
       attenuator2_increment:
         key: actual.value.incrementRod2
+        type: int
       attenuator2_thickness:
         key: actual.value.thicknessRod2
       attenuator2_material:
@@ -358,6 +381,7 @@ Karabo_bridge:
 
       attenuator3_increment:
         key: actual.value.incrementRod3
+        type: int
       attenuator3_thickness:
         key: actual.value.thicknessRod3
       attenuator3_material:
@@ -370,6 +394,7 @@ Karabo_bridge:
 
       attenuator4_increment:
         key: actual.value.incrementRod4
+        type: int
       attenuator4_thickness:
         key: actual.value.thicknessRod4
       attenuator4_material:
@@ -394,9 +419,11 @@ Karabo_bridge:
         type: str
       config0_valve_indices:
         key: valvesConfigTable.value[0].valveIds
+        type: list[str]
         action_axis: 0
       config0_positions:
         key: valvesConfigTable.value[0].nPositions
+        type: int
       config0_labels:
         key: valvesConfigTable.value[0].labels
         type: list[str]
@@ -406,9 +433,11 @@ Karabo_bridge:
         type: str
       config1_valve_indices:
         key: valvesConfigTable.value[1].valveIds
+        type: list[str]
         action_axis: 0
       config1_positions:
         key: valvesConfigTable.value[1].nPositions
+        type: int
       config1_labels:
         key: valvesConfigTable.value[1].labels
         type: list[str]
@@ -418,19 +447,24 @@ Karabo_bridge:
         type: str
       config2_valve_indices:
         key: valvesConfigTable.value[2].valveIds
+        type: list[str]
         action_axis: 0
       config2_positions:
         key: valvesConfigTable.value[2].nPositions
+        type: int
       config2_labels:
         key: valvesConfigTable.value[2].labels
         type: list[str]
 
       groupA_position:
         key: GROUPA.currentPosition.value
+        type: int
       sample1_position:
         key: SPB_IRU_LIQUIDJETVALVEVALVE_SAMPLE_1.currentPosition.value
+        type: int
       sample2_position:
         key: SPB_IRU_LIQUIDJETVALVEVALVE_SAMPLE_2.currentPosition.value
+        type: int
 
     device.sample_delivery_rate:
       source: SPB_BIO_SYS/PUMP/HPLC
@@ -451,6 +485,7 @@ Karabo_bridge:
         unit: microliter/minute
       pump_b_value:
         key: b.flow.value
+        type: decimal
         unit: unknown
 
       pump_c_flow_value:
@@ -459,6 +494,7 @@ Karabo_bridge:
         unit: microliter/minute
       pump_c_value:
         key: c.volume.value
+        type: decimal
         unit: unknown
 
       pump_d_flow_value:
@@ -467,6 +503,7 @@ Karabo_bridge:
         unit: microliter/minute
       pump_d_value:
         key: d.volume.value
+        type: decimal
         unit: unknown
 
     device.sample_delivery_injector:
@@ -475,6 +512,7 @@ Karabo_bridge:
 
       position_z:
         key: actualPosition.value
+        type: decimal
         unit: mm
 
   # explicitly ignore the following entries
